--- a/learnstudio/src/styles.scss
+++ b/learnstudio/src/styles.scss
@@ -4,8 +4,14 @@ $shadedBlue: #3D73A8;
 $shadedBlueTxt: white;
 $shadedBlueLink: orange;
 
+$blurryWrapper: #00000050;
+$blurryWrapperBox: white;
+
 html, body {
   margin: 0;
   padding: 0;
   font-family: "Gill Sans", sans-serif;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
