--- a/learnstudio/src/styles.scss
+++ b/learnstudio/src/styles.scss
@@ -7,6 +7,8 @@ $shadedBlueLink: orange;
 $blurryWrapper: #00000050;
 $blurryWrapperBox: white;
 
+$headerHeight: 64px;
+
 html, body {
   margin: 0;
   padding: 0;
