--- a/learnstudio/src/app/pages/landing-page/landing-page.component.scss
+++ b/learnstudio/src/app/pages/landing-page/landing-page.component.scss
@@ -6,15 +6,28 @@
   overflow: hidden;
 }
 
-.fixedHeader {
+
+.toolbar {
   background-color: $shadedBlue;
+  color: $shadedBlueTxt;
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: space-between;
-  padding: 0.5em;
   position: sticky;
   top: 0;
+
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+
+  .iconWrapper {
+    float: right;
+  }
+
+  .logo {
+    display: flex;
+    align-items: center;
+  }
 
   .loginButton, .registerButton {
     border-radius: 5px;
@@ -70,5 +83,8 @@
     z-index: 3;
     position: absolute;
     cursor: pointer;
+    background-color: orange;
+    top: 25vh;
+    right: 34vw;
   }
 }
