--- a/learnstudio/src/app/pages/logged-content/navigation-bar/navigation-bar.component.html
+++ b/learnstudio/src/app/pages/logged-content/navigation-bar/navigation-bar.component.html
@@ -7,7 +7,7 @@
         <img src="./assets/logo_txt.png">
       </div>
       <div class="iconWrapper">
-        <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+        <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon" (click)="router.navigate(['learn/exercises'])">
         <mat-icon>school</mat-icon>
       </button>
       <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
