add modification at exercice

--- a/learnstudio/src/app/pages/logged-content/office-atmosphere/office-atmosphere.component.scss
+++ b/learnstudio/src/app/pages/logged-content/office-atmosphere/office-atmosphere.component.scss
@@ -9,3 +9,11 @@
 #audio {
     display: none;
 }
+
+.my_form {
+    display: none;
+    margin-top: -150px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+}
