--- a/learnstudio/src/app/pages/logged-content/office-atmosphere/office-atmosphere.component.html
+++ b/learnstudio/src/app/pages/logged-content/office-atmosphere/office-atmosphere.component.html
@@ -2,7 +2,7 @@
     <app-navigation-bar class="header"></app-navigation-bar>
     <h1><bold>Pour cette exercices vous devez lancer la lecture et continuer de travailler sur l'ordinateur avec un bruit de fond de ville</bold></h1>
     <h3>L'objectif est de pouvoir travailler avec le bruit environnant réel des rue de paris (dans le cas ou le métier serais serveur dans un café par exemple)</h3>
-    <div class="container" >
+    <div class="container my_media" >
         <button class="my_media pp_button" (click)="play_pause()">Mettre sur play</button>
         <audio class="my_media" id="audio"
             controls
@@ -11,4 +11,5 @@
                 <code>audio</code> element.
         </audio>
     </div>
+    <iframe class="my_form" src="https://docs.google.com/forms/d/e/1FAIpQLSf3O4Bo88bXbN6yPLAfaykWLBfM_GnQllEhutBlT0DpkF4fHg/viewform?embedded=true" width="640" height="1272" frameborder="0" marginheight="0" marginwidth="0">Chargement…</iframe>
 </div>
