resolve probleme log

--- a/learnstudio/src/app/pages/logged-content/office-atmosphere/office-atmosphere.component.html
+++ b/learnstudio/src/app/pages/logged-content/office-atmosphere/office-atmosphere.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
     <app-navigation-bar class="header"></app-navigation-bar>
-    <h1><bold>Pour cette exercices vous devez lancer la lecture et continuer de travailler sur l'ordinateur avec un bruit de fond de ville</bold></h1>
+    <h1>Pour cette exercices vous devez lancer la lecture et continuer de travailler sur l'ordinateur avec un bruit de fond de ville</h1>
     <h3>L'objectif est de pouvoir travailler avec le bruit environnant réel des rue de paris (dans le cas ou le métier serais serveur dans un café par exemple)</h3>
     <div class="container my_media" >
         <button class="my_media pp_button" (click)="play_pause()">Mettre sur play</button>
