--- a/learnstudio/src/app/pages/logged-content/office-atmosphere/office-atmosphere.component.html
+++ b/learnstudio/src/app/pages/logged-content/office-atmosphere/office-atmosphere.component.html
@@ -3,7 +3,7 @@
     <h1>Pour cette exercices vous devez lancer la lecture et continuer de travailler sur l'ordinateur avec un bruit de fond de ville</h1>
     <h3>L'objectif est de pouvoir travailler avec le bruit environnant réel des rue de paris (dans le cas ou le métier serais serveur dans un café par exemple)</h3>
     <div class="container my_media" >
-        <button class="my_media pp_button" (click)="play_pause()">Mettre sur play</button>
+        <button class="my_media pp_button" (click)="playPause()">Mettre sur play</button>
         <audio class="my_media" id="audio"
             controls
             src="../../../../assets/sound/ambiance-sonore-rues-de-paris-binaural.mp3">
