--- a/learnstudio/src/app/pages/logged-content/exercises-list/exercises-list.component.html
+++ b/learnstudio/src/app/pages/logged-content/exercises-list/exercises-list.component.html
@@ -20,7 +20,7 @@
                 <mat-icon *ngIf="exercise.maitrise == index + 0.5">star_half</mat-icon>
                 <mat-icon *ngIf="exercise.maitrise < index + 0.5">star_border</mat-icon>
               </span>
-              {{exercise.maitrise}}pt de maitrise
+              {{exercise.maitrise}}pt de difficulté
             </mat-card-subtitle>
           </mat-card-header>
           <img mat-card-image src="{{exercise.imageLink !== '' ? exercise.imageLink : './assets/image_not_found.png'}}" alt="{{exercise.imageAlt}}">
