--- a/learnstudio/src/app/pages/landing-page/landing-page.component.html
+++ b/learnstudio/src/app/pages/landing-page/landing-page.component.html
@@ -1,10 +1,10 @@
 <div class="wrapperLandingPage">
   <mat-toolbar class="toolbar">
     <div class="logo">
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+      <!-- <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
         <mat-icon>menu</mat-icon>
-      </button>
-      <img src="./assets/logo_txt.png">
+      </button> -->
+      <img src="./assets/logo_txt_white.png" height="150">
     </div>
     <div class="iconWrapper">
       <button (click)="openRegisterLogin(false, true)" class="loginButton">Connexion</button>
