--- a/learnstudio/src/app/pages/logged-content/exercises-list/exercises-list.component.scss
+++ b/learnstudio/src/app/pages/logged-content/exercises-list/exercises-list.component.scss
@@ -5,11 +5,11 @@
   display: flex;
   flex-flow: row wrap;
   align-items: flex-start;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   gap: 2em;
 
   .exerciseBox {
-    max-width: 250px;
+    max-width: 280px;
     height: fit-content;
 
     .buttonCenter {
@@ -23,9 +23,25 @@
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
-      width: 230px;
+      width: 250px;
     }
 
+    .exerciseDescription{
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      width: 250px;
+      padding-right: -1rem;
+    }
+
+    .mat-card-subtitle{
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: flex-start;
+      width: 250px;
+    }
   }
 }
 
