--- a/learnstudio/src/app/pages/landing-page/landing-page.component.scss
+++ b/learnstudio/src/app/pages/landing-page/landing-page.component.scss
@@ -1,12 +1,87 @@
 @import "src/styles";
 
 .wrapperLandingPage {
-  min-height: 100vh;
-  width: 100vw;
+  width: auto;
   overflow: hidden;
 }
 
+div{
+  .flex{
+    display: flex;
+    justify-content: space-around;
+  }
 
+  .padding-x{
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+
+  .padding-2x{
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  .padding-y{
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+  }
+
+  .padding-2y{
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+
+  .half{
+    width: 45%;
+  }
+
+  .thirty{
+    width: 30%;
+  }
+
+  .seventy{
+    width: 60%;
+  }
+}
+.landingCard{
+  width: 80vw;
+  margin: auto;
+  position: relative;
+  top: -2rem;
+  padding: 3rem;
+
+  mat-card-title{
+    font-size: 1.75rem;
+    line-height: 2rem;
+    padding-bottom: 3rem;
+  }
+}
+
+.mat-card-3{
+  width: 25%;
+  text-align: center;
+
+  mat-card-title{
+    padding-bottom: 1.5rem;
+  }
+
+  .card-img{
+    width: 40%;
+  }
+}
+
+.title{
+  font-size: x-large;
+  line-height: 2rem;
+}
+
+.blue{
+  width: 100%;
+  background-image: url(../../../assets/blue_background.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: right;
+}
 .toolbar {
   background-color: $shadedBlue;
   color: $shadedBlueTxt;
@@ -51,11 +126,14 @@
 }
 
 
-.content {
-  height: 92vh;
+.landing_header{
+  width: calc(100% - (2*8rem));
+  background-image: url(../../../assets/landing_picture.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: right;
+  padding: 8rem;
 }
-
-
 
 .footer {
   background-color: $shadedBlue;
@@ -83,7 +161,7 @@
     z-index: 3;
     position: absolute;
     cursor: pointer;
-    background-color: orange;
+    background-color: $shadedBlueLink;
     top: 25vh;
     right: 34vw;
   }
