--- a/learnstudio/src/app/pages/landing-page/landing-page.component.html
+++ b/learnstudio/src/app/pages/landing-page/landing-page.component.html
@@ -30,7 +30,7 @@
               <br/><br/>
             </p>
             <span class="title">Découvre maintenant ta personnalité, ou bien crée un compte Learn !</span>
-            <div class="flex padding-y">
+            <div class="flex wrap padding-y">
               <button class="callToAction2">Je teste ma personnalité</button>
               <button class="callToAction">Je crée un compte Learn</button>
             </div>
