--- a/learnstudio/src/styles.scss
+++ b/learnstudio/src/styles.scss
@@ -41,6 +41,7 @@ h1{
   border: none;
   font-size: medium;
   font-weight: normal;
+  margin: 1rem 1rem;
 }
 .callToAction2 {
   background-color: white;
@@ -51,6 +52,7 @@ h1{
   font-size: medium;
   font-weight: normal;
   border: 3px solid $shadedBlueLink;
+  margin: 1rem 1rem;
 }
 
 html, body {
