--- a/learn-studio-front/src/styles.scss
+++ b/learn-studio-front/src/styles.scss
@@ -1,4 +1,90 @@
-/* You can add global styles to this file, and also import other style files */
+$shadedBlue: #58A8F5;
+$shadedBlueTxt: white;
+$shadedBlueLink: #F59F70;
 
-html, body { height: 100%; }
+$blurryWrapper: #00000050;
+$blurryWrapperBox: white;
+
+$headerHeight: 64px;
+
+@font-face {
+  font-family: 'Eras';
+  font-weight: bold;
+  src: url("./assets/fonts/eras-demi-itc.ttf") format("ttf");
+}
+
+h1{
+  font-family: 'Eras', 'Roboto', sans-serif;
+  color: #fff;
+  font-size: 3rem;
+  font-weight: 500;
+  padding-bottom: 3rem;
+  line-height: 3rem;
+}
+
+.mainCallToAction {
+  background-color: $shadedBlueLink;
+  color: #fff;
+  padding: 1rem 3rem;
+  border-radius: 25px;
+  border: none;
+  font-size: medium;
+  font-weight: normal;
+}
+.callToAction {
+  background-color: $shadedBlueLink;
+  color: #fff;
+  padding: 0.75rem 0.75rem;
+  border-radius: 25px;
+  border: none;
+  font-size: medium;
+  font-weight: normal;
+  margin: 1rem 1rem;
+}
+.callToAction2 {
+  background-color: white;
+  color: $shadedBlueLink;
+  padding: 0.7rem 0.7rem;
+  border-radius: 25px;
+  border: none;
+  font-size: medium;
+  font-weight: normal;
+  border: 3px solid $shadedBlueLink;
+  margin: 1rem 1rem;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  font-family: "Gill Sans", sans-serif;
+}
+
+html, body { height: 100%;}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.pageWrapper {
+  height: calc(100vh - 96px);
+  padding: 3vh 3vh 0 3vh;
+
+  .pageBox {
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+    height: calc(96vh - 96px);
+    padding: 1em;
+    // border-radius: 25px;
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    // background-color: #3D73A811;
+
+    .boxTitle {
+      color: $shadedBlueLink;
+      font-size: xx-large;
+      font-weight: 400;
+      font-family: 'Roboto', serif;
+      padding: 0.5em 1em;
+    }
+  }
+}
