Ajout de l'exercice de Joffrey et modification du css

--- a/learn-studio-front/src/app/pages/landing-page/landing-page.component.scss
+++ b/learn-studio-front/src/app/pages/landing-page/landing-page.component.scss
@@ -135,7 +135,7 @@ div{
 
 
 .landing_header{
-  width: calc(100% - (2*8rem));
+  width: 100%;
   background-image: url(../../../assets/landing_picture.png);
   background-repeat: no-repeat;
   background-size: cover;
