--- a/learn-studio-front/src/app/pages/restrictedContent/exercise/exercise.component.html
+++ b/learn-studio-front/src/app/pages/restrictedContent/exercise/exercise.component.html
@@ -1,13 +1,56 @@
-<div class="wrapper">
-  <app-navigation-bar class="header"></app-navigation-bar>
-  <div class="pageWrapper">
-    <div class="pageBox">
-      <div class="boxTitle">
-        Exercice
-      </div>
-      <div *ngIf="exerciseId == 0">
-        Exercise non trouvé
-      </div>
+  <div class="wrapper">
+    <!-- <navigation-bar class="header"></navigation-bar> -->
+    <div class="pageWrapper">
+        <div class="flexContent wrap">
+          <div>
+            <h3>Mise en situation</h3>
+          </div>
+
+          <button mat-button class="consigne" (click)="openDialog()">Lire les consignes</button>
+        </div>
+
+        <p>{{ contexte }}</p>
+
+        <mat-horizontal-stepper>
+          
+          <mat-step *ngFor="let situation of situations; let i = index" label="Situation {{ i + 1 }}">
+            <p>{{ situation.scenario }}</p>
+            <p class="consigne">{{ situation.todo }}</p>
+              <div *ngFor="let liste of situation.liste; let j = index" >
+                <div class="form-check flexContent">
+                  <div>
+                    <p>{{ liste.proposition }}</p>
+                  </div>
+                  <mat-form-field appearance="fill">
+                    <mat-label>Sélectionner la réponse</mat-label>
+                    <mat-select required [formControl]="selectFormControl">
+                      <mat-option *ngFor="let response of responses" [value]="response.value">
+                        {{response.viewValue}}
+                      </mat-option>
+                    </mat-select>
+                  </mat-form-field>
+                  
+                </div>
+                <mat-divider></mat-divider>
+
+            </div>
+            <div class="flexContent">
+              <button *ngIf="true" mat-button matStepperPrevious>Situation précédente</button>
+              <button  mat-button *ngIf="!selectFormControl.hasError('required')" mat-button matStepperNext class="right-button">Situation suivante</button>
+            </div>
+            
+          </mat-step>
+          <mat-step label="Fin">
+            <p>Vous êtes arrivés à la fin questionnaire. Vous avez encore la possibilité de revenir aux questions précédentes pour corriger vos réponses, ou bien vous pouvez envoyer vos réponses. <br/>
+              Une fois vos réponses envoyées, vous ne pourrez plus revenir en arrière et votre score sera sauvegardé.</p>
+            <div>
+              <button mat-button>Valider mes réponses</button>
+              <button mat-button matStepperPrevious>Corriger mes réponses</button>
+            </div>
+          </mat-step>
+        </mat-horizontal-stepper>
+  
+
+
     </div>
   </div>
-</div>
