--- a/learn-studio-front/src/app/pages/restrictedContent/profile/profile.component.html
+++ b/learn-studio-front/src/app/pages/restrictedContent/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <app-navigation-bar class="header"></app-navigation-bar>
+  <!-- <app-navigation-bar class="header"></app-navigation-bar> -->
   <div class="pageWrapper">
     <div class="pageBox">
       <div class="boxTitle">
