--- a/learn-studio-front/src/app/pages/landing-page/landing-page.component.html
+++ b/learn-studio-front/src/app/pages/landing-page/landing-page.component.html
@@ -101,6 +101,6 @@
       <mat-icon>close</mat-icon>
     </button>
     <app-login *ngIf="login"></app-login>
-    <app-register *ngIf="register"></app-register>
+    <app-register1 *ngIf="register"></app-register1>
   </div>
 </div>
