intégration exo1 & modification json

--- a/learn-studio-front/src/app/pages/restrictedContent/exercise/exercise.component.html
+++ b/learn-studio-front/src/app/pages/restrictedContent/exercise/exercise.component.html
@@ -2,12 +2,10 @@
   <app-navigation-bar class="header"></app-navigation-bar>
   <div class="pageWrapper">
     <div class="pageBox">
-      <div class="boxTitle">
-        Exercice
-      </div>
       <div *ngIf="exerciseId == 0">
-        Exercise non trouvé
+        Exercice non trouvé
       </div>
+      <app-mise-en-situation *ngIf="exerciseId == 1"></app-mise-en-situation>
     </div>
   </div>
 </div>
