register & login -> css blurry wrapper fixed and button @output

--- a/learn-studio-front/src/app/pages/authentification/login/login.component.html
+++ b/learn-studio-front/src/app/pages/authentification/login/login.component.html
@@ -1,5 +1,8 @@
 <div class="blurryWrapperIn">
   <div class="whiteWrapper">
+    <button mat-mini-fab class="close" (click)="close.emit()">
+      <mat-icon>close</mat-icon>
+    </button>
     <div class="title">
       Connexion
     </div>
