mise en situation -> dialog trigger, blur background launch music

--- a/learn-studio-front/src/app/exercises/mise-en-situation/mise-en-situation.component.scss
+++ b/learn-studio-front/src/app/exercises/mise-en-situation/mise-en-situation.component.scss
@@ -19,6 +19,9 @@
 .custom-radio-label{
   border: 1px solid black;
   margin: 2rem;
+}
 
-
+.blurry {
+  filter: blur(3px);
+  -webkit-filter: blur(3px);
 }
