--- a/learn-studio-front/src/app/exercises/mise-en-situation/mise-en-situation.component.html
+++ b/learn-studio-front/src/app/exercises/mise-en-situation/mise-en-situation.component.html
@@ -4,7 +4,7 @@
       <h3>Mise en situation</h3>
     </div>
 
-    <button mat-button class="consigne" (click)="openDialog()">Lire les consignes</button>
+    <!--<button mat-button class="consigne" (click)="openDialog()">Lire les consignes</button>-->
   </div>
 
   <p>{{ contexte }}</p>
