landing page button hover and personality form init

--- a/learn-studio-front/src/app/pages/landing-page/landing-page.component.html
+++ b/learn-studio-front/src/app/pages/landing-page/landing-page.component.html
@@ -31,8 +31,8 @@
             </p>
             <span class="title">Découvre maintenant ta personnalité, ou bien crée un compte Learn !</span>
             <div class="flex wrap padding-y">
-              <button class="callToAction2">Je teste ma personnalité</button>
-              <button class="callToAction">Je crée un compte Learn</button>
+              <button class="callToAction2" (click)="click_personality_form()" >Je teste ma personnalité</button>
+              <button class="callToAction" (click)="click_register()" >Je crée un compte Learn</button>
             </div>
           </div>
 
